--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "html-parser": "^0.11.0",
     "html-table-to-json": "^1.0.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "random-useragent": "^0.5.0",
     "request": "^2.88.2",
     "sequelize": "^6.23.1",
     "socket.io": "^4.5.2",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "electron": "^20.2.0",
+    "playwright": "^1.26.1",
     "sequelize-cli": "^6.4.1"
   }
 }
